--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,11 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <Button
         android:id="@+id/btn_kakao"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="카카오톡 로그인" />
+
+    <com.kakao.usermgmt.LoginButton
+        android:id="@+id/com_kakao_login"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"/>
 
     <Button
         android:id="@+id/btn_facebook"
