--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,4 +23,11 @@
         android:layout_below="@+id/btn_kakao"
         android:text="페이스북 로그인" />
 
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/com_facebook_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible" />
+
 </RelativeLayout>
